LOOKS: Fix center full screen not working on small devices

--- a/src/styles/common/center-full-screen.scss
+++ b/src/styles/common/center-full-screen.scss
@@ -3,5 +3,7 @@
 //
 .center-full-screen {
   @include flex-center;
-  height: 100vh;
+  @media (min-width: $screen-sm) {
+    height: 100vh;
+  }
 }
